# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: brain_calc_engine.py  brain_engine.py  brain_even_engine.py
brain_games/games/: brain_calc_engine.py  brain_even_engine.py  brain_gcd_engine.py  brain_prime_engine.py  brain_progression_engine.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
